--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,12 @@
     <string name="order_for_summ">"Заказать на "</string>
     <string name="empty_cart">Пусто, выберите блюда\nв каталоге</string>
     <!-- Product screen -->
+    <string name="add_to_cart">"В корзину за "</string>
+    <string name="weight">Вес</string>
+    <string name="energy">Энерг. ценность</string>
+    <string name="proteins">Белки</string>
+    <string name="fats">Жиры</string>
+    <string name="carbohydrates">Углеводы</string>
+    <string name="energy_unit">ккал</string>
+    <string name="gram">г</string>
 </resources>
